docs/src/content/v1.0.7/pt-br/migrations.md
# Migrations

Migrations do Dinoco são artefatos SQL produzidos a partir de um diff validado. O `SqlCompiler` do adapter escreve statements de enum, tabela, coluna e foreign key no dialeto correto.

## Ciclo de uma migration

1. Compilar `dinoco/schema.dinoco` e validar tipos e relações.
2. Conectar ao primary e inspecionar a estrutura real.
3. Construir o schema desejado em tabelas de teste isoladas no próprio banco.
4. Comparar as estruturas atual e desejada.
5. Mostrar cada passo e todo risco detectado.
6. Pedir confirmação para alterações destrutivas.
7. Gerar `up.sql` e `down.sql`, aplicar o up, registrar a migration e gerar models.

O estado atual vem do banco por introspecção, não de um `schema.bin` antigo.

## Gere uma migration

Configure apenas a URL do banco principal:

```bash
export DATABASE_URL="postgres://postgres:postgres@localhost:5432/app"
dinoco migrate generate
```

Em PostgreSQL e MySQL, a CLI materializa o schema desejado no próprio banco usando tabelas isoladas com o prefixo `dinoco_migration_test_`. Essas tabelas, suas foreign keys e os enums auxiliares são removidos assim que o planejamento termina, inclusive quando ocorre um erro. Em SQLite, a validação continua usando um arquivo temporário.

O prefixo `dinoco_migration_test_` é reservado pelo Dinoco e não deve ser usado por tabelas da aplicação. Nenhuma URL shadow adicional é necessária.

## Como as alterações são detectadas

O planner compara:

- tabelas criadas e removidas;
- colunas adicionadas, removidas, renomeadas ou alteradas;
- mudanças de tipo escalar e tipo nativo;
- opcional para obrigatório e obrigatório para opcional;
- defaults, primary keys e constraints observáveis;
- enums criados, alterados e removidos;
- foreign keys e ações referenciais adicionadas, mudadas ou removidas;
- relações adicionadas ou removidas por suas constraints físicas.

A detecção de rename é estrutural. Sempre confirme a inferência, pois um drop e um add independentes podem ter forma parecida.

## Alterações perigosas

Remover tabela ou coluna populada, estreitar tipo, remover enum value ou tornar uma coluna nullable obrigatória pode perder dados ou falhar para rows atuais. A CLI destaca o risco e deixa a resposta padrão da confirmação como `No`.

Um banco com tabelas de usuário, mas sem `dinoco_migrations`, também exige confirmação. Em CI, `DINOCO_CLI_CONFIRM_DESTRUCTIVE=true` pode confirmar riscos; trate isso como configuração privilegiada de release.

## Revise o SQL gerado

```text
dinoco/migrations/1721320123456_generated/
  up.sql
  down.sql
```

Revise locks, reescrita de dados, impacto de índices e comportamento de enums. Operações irreversíveis aparecem como comentários explicativos no `down.sql`, porque dados apagados não podem ser recriados com segurança.

Faça commit dos dois arquivos e nunca edite uma migration já aplicada; gere outra para manter o histórico igual em todos os ambientes.

## Execute migrations pendentes

```bash
dinoco migrate run
```

O comando cria `dinoco_migrations`, ordena diretórios, ignora migrations já registradas e aplica os `up.sql` pendentes.

## Models gerados

`migrate generate` sempre atualiza `dinoco/mod.rs` e `dinoco/models/`. Mesmo sem mudança de banco, os models são regenerados antes de encerrar.
